avoid white blink when dark mode, avoid toggle blink

--- a/assets/scss/body_dark.scss
+++ b/assets/scss/body_dark.scss
@@ -1,37 +1,37 @@
 
 
-body {
+html {
   background: var(--white-background);
 }
 
-body.dark-mode {
+html.dark-mode {
     background: var(--black-background);
   }
   
-  body.dark-mode h1,
-  body.dark-mode h2,
-  body.dark-mode h3,
-  body.dark-mode h4,
-  body.dark-mode h5,
-  body.dark-mode p,
-  body.dark-mode label,
-  body.dark-mode span,
-  body.dark-mode td {
+  html.dark-mode h1,
+  html.dark-mode h2,
+  html.dark-mode h3,
+  html.dark-mode h4,
+  html.dark-mode h5,
+  html.dark-mode p,
+  html.dark-mode label,
+  html.dark-mode span,
+  html.dark-mode td {
     color: var(--white-text);
   }
   
-  body.dark-mode {
+  html.dark-mode {
     color: var(--white-text);
   }
   
-  body .background-on,
-  body .background-on tr
+  html .background-on,
+  html .background-on tr
   {
       background-color: var(--active-white);
   }
 
-  body.dark-mode .background-on,
-  body.dark-mode .background-on tr
+  html.dark-mode .background-on,
+  html.dark-mode .background-on tr
   {
       background-color: var(--active-black);
   }
@@ -45,7 +45,7 @@ body.dark-mode {
 
 
 
-body.dark-mode .page-button {
+html.dark-mode .page-button {
   font-size: large;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
   border-radius: 0.2em;
