--- a/assets/scss/podcast_cover.scss
+++ b/assets/scss/podcast_cover.scss
@@ -1,8 +1,4 @@
 
-body.yuu-theme-dark .extendview {
-    color: #f1f1f1;
-}
-
 .mycard .card-inside img{
     object-fit: cover;
     height: 100%;
